# protorowdf

./: .gitignore  Cargo.toml  README.md  build.rs  config.pb.go  config.proto  field.go  generate.go  getorpanic.go  go.mod  go.sum  gocopy.go  gocopy.tmpl  gocopy_test.go  parse.go  parseyaml_test.go  pluralname.go  prettycomments.go  proto.tmpl  protofile.go  protofiledefinition_test.go  protoname.go  protoname_test.go  rustcopy.go  rustcopy.tmpl  rustcopy_test.go  struct.go  supportedtype.go  tmpl.go
cmd/gen-proto-row-df/: main.go
src/: copier.rs  lib.rs
testdata/: copy.go  input.yml  output.proto
testdata/rusty/: Cargo.toml  build.rs
testdata/rusty/src/: lib.rs
