[package]
name = "protorowdf"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]
prost-build = "0.12"
